--- a/index-START.html
+++ b/index-START.html
@@ -51,9 +51,23 @@
       e.preventDefault();
       const text = (this.querySelector('[name=item]')).value;
       const item = {
-        text: 'Item Name',
+        text,
         done: false
-      }
+      };
+      console.log(item);
+      items.push(item);
+      populateList(items, itemsList);
+      this.reset();
+    }
+
+    function populateList(plates = [], platesList) {
+      platesList.innerHTML = plates.map((plate, i) => {
+        return `
+        <li>
+            <lable for="">${plate.text}</label>
+        <li>
+        `;
+      }).join('');
     }
 
     addItems.addEventListener('submit', addItem);
