--- a/index-START.html
+++ b/index-START.html
@@ -64,11 +64,27 @@
       platesList.innerHTML = plates.map((plate, i) => {
         return `
         <li>
-            <lable for="">${plate.text}</label>
-        <li>
+            <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+            <lable for="item${i}">${plate.text}</label>
+        </li>
         `;
       }).join('');
     }
+
+    function populateList(plates = [], platesList) {
+      platesList.innerHTML = plates.map((plate, i) => {
+        return `
+          <li>
+            <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+            <label for="item${i}">${plate.text}</label>
+          </li>
+        `;
+      }).join('');
+    }
+
+
+
+
 
     addItems.addEventListener('submit', addItem);
   </script>
