--- a/index-START.html
+++ b/index-START.html
@@ -45,7 +45,7 @@
   <script>
     const addItems = document.querySelector('.add-items');
     const itemsList = document.querySelector('.plates');
-    const items = [];
+    const items = JSON.parse(localStorage.getItem('items')) || [];
 
     function addItem(e) {
       e.preventDefault();
@@ -72,22 +72,34 @@
       }).join('');
     }
 
+
     function populateList(plates = [], platesList) {
       platesList.innerHTML = plates.map((plate, i) => {
         return `
-          <li>
-            <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
-            <label for="item${i}">${plate.text}</label>
-          </li>
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+          <label for="item${i}">${plate.text}</label>
+        </li>
         `;
       }).join('');
+    }
+
+    function toggleDone(e) {
+      if (!e.target.matches('input')) return; // skip this unless its an input
+      const el = e.target;
+      const index = el.dataset.index;
+      items[index].done = !items[index].done;
+      localStorage.setItem('items', JSON.stringify(items));
+      populateList(items, itemsList);
+
     }
 
 
 
 
-
     addItems.addEventListener('submit', addItem);
+    itemsList.addEventListener('click', toggleDone);
+    populateList(items, itemsList);
   </script>
 
 </body>
